@@ -1,6 +1,10 @@
 
 
 2.0 (0000-00-00)
+Application:
+- Change mask color right-click menu item is sensitive only when a mask is
+  present (fixing crashes when it was activated without a mask).
+
 Modules:
 - Shade: Crash on Mix checkbutton click was fixed.
 
